fixed modal sizes on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1046,11 +1046,15 @@ ul {
 }
 .card__modal__img {
   position: absolute;
-  height: 95%;
+  max-width: 90%;
+  max-height: 90%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.5);
   transition: all 0.25s ease-out;
+}
+.card__modal__img img {
+  object-fit: cover;
 }
 .card__info {
   padding: 1.5rem;
